samples/_failures_safe/1761341739_78c5b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0561f239.c: In function ‘main’:
./samples/SAFE/__tmp_0561f239.c:176:12: error: expected identifier or ‘(’ at end of input
  176 |     struct Token
      |            ^~~~~
./samples/SAFE/__tmp_0561f239.c:176:12: error: expected declaration or statement at end of input
